--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
         <module>xuecheng-plus-content-model</module>
         <module>xuecheng-plus-content-api</module>
         <module>xuecheng-plus-content/xuecheng-plus-content-service</module>
+        <module>xuecheng-plus-generator</module>
     </modules>
 
     <properties>
