--- a/xuecheng-plus-content/xuecheng-plus-content-web/pom.xml
+++ b/xuecheng-plus-content/xuecheng-plus-content-web/pom.xml
@@ -3,11 +3,11 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
-        <artifactId>xuecheng-plus-content</artifactId>
+        <artifactId>xuecheng-plus-parent</artifactId>
         <groupId>com.xuecheng</groupId>
         <version>0.0.1-SNAPSHOT</version>
     </parent>
-    <artifactId>xuecheng-plus-content-api</artifactId>
+    <artifactId>xuecheng-plus-content-web</artifactId>
     <dependencies>
         <dependency>
             <groupId>com.xuecheng</groupId>
